--- a/landing_page/src/App.css
+++ b/landing_page/src/App.css
@@ -5,6 +5,7 @@
 body div {
   margin: 0;
   padding: 0;
+  align-items: center;
 }
 
 .App {
@@ -18,13 +19,16 @@ body div {
 
 .App-container {
   display: grid;
-  grid-template-columns: minmax(auto, 1140px);
+  grid-template-columns: minmax(auto, 80%);
+  grid-template-rows: minmax(auto, 640px);
   justify-content: center;
   align-items: center;
 }
 
 .App-content {
+  grid-row: 1;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   position: relative;
@@ -33,6 +37,7 @@ body div {
 .App img {
   width: 70%;
   height: auto;
+  object-fit: cover;
 }
 
 .App-title {
